@@ -604,6 +604,7 @@ then
 		case "$f90_id" in
 		ifort | ifc )
 			try_libdirs="/usr/local/lib
+				     /opt/intel/mkl701/lib/64
 				     /opt/intel/mkl70/lib/64
 				     /opt/intel/mkl/mkl61/lib/64
 				     /opt/intel/mkl/lib/64
@@ -621,6 +622,7 @@ then
 		case "$f90_id" in
 		ifort | ifc )
 			try_libdirs="/usr/local/lib
+				     /opt/intel/mkl701/lib/32
 				     /opt/intel/mkl70/lib/32
 				     /opt/intel/mkl/mkl61/lib/32
 				     /opt/intel/mkl/lib/32
